<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.aguis.etecapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="300"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_local_grocery_store_black_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item android:id="@+id/action_voice"
        android:orderInCategory="500"
        android:title="@string/action_voice"
        android:icon="@drawable/ic_mic_black_24dp"
        app:showAsAction="always"/>


</menu>
